json action test

--- a/tinyleaps.be/index.html
+++ b/tinyleaps.be/index.html
@@ -83,7 +83,7 @@
    $(document).ready(function() {
       eb = new vertx.EventBus("http://test.tinyleaps.be/eventbus");
       eb.onopen = function() {
-         var json = "something";
+	 var json = {action: "countries"};
          eb.send("be.qsys.tinyleaps.api", json, function(reply) {
 	    alert(JSON.stringify(reply.result));
          });
