new api calls: travelinfo, countries

--- a/tinyleaps.be/index.html
+++ b/tinyleaps.be/index.html
@@ -1,102 +1,125 @@
 <!DOCTYPE html>
 <html>
-<head lang="en">
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="./pocketgrid.css" type="text/css" rel="stylesheet"/>
-    <link href="./responsive.css" type="text/css" rel="stylesheet"/>
-    <title>Reisblog Ruth en Kurt</title>
-</head>
+	<head lang="en">
+		<meta charset="UTF-8">
+		<meta name="viewport" content="width=device-width, initial-scale=1.0">
+		<link href="./pocketgrid.css" type="text/css" rel="stylesheet"/>
+		<link href="./responsive.css" type="text/css" rel="stylesheet"/>
+		<link href="./jquery-ui.min.css" type="text/css" rel="stylesheet"/>
+		<link href="./jquery-ui.theme.min.css" type="text/css" rel="stylesheet"/>
+		<title>Reisblog Ruth en Kurt</title>
+	</head>
 
-<body>
+	<body>
 
-<div class="block-group">
-    <header class="block">
-        <script id="headerscript" type="text/ractive">
-           <h1>{{titel}}</h1>
-           <h2>{{subtitel}}</h2>
-        </script>
-    </header>
-    <nav class="block">
-        <div>
-            Nav
-        </div>
-    </nav>
-    <section class="block">
-        <article class="block-group">
-            <h1>blog title 1</h1>
+		<div class="block-group">
+			<header class="block">
+			<script id="headerscript" type="text/ractive">
+				<h1>{{titel}} </h1>
+				<h2>{{subtitel}}</h2>
+			</script>
+			</header>
 
-            <div class="block content">
-                <div class="block text">
-                    tekst 1
-                </div>
-                <div class="block pics">
-                    pics 1
-                </div>
-            </div>
-            <div class="block comment">comment 1</div>
-        </article>
-        <article class="block-group">
-            <h1>blog title 2</h1>
+			<nav class="block">
+			<div class="travelinfo">
+			</div>
+			</nav>
 
-            <div class="block content">
-                <div class="block text">
-                    tekst 2
-                </div>
-                <div class="block pics">
-                    pics 2
-                </div>
-            </div>
-            <div class="block comment">comment 2</div>
-        </article>
-        <article class="block-group">
-            <h1>blog title 3</h1>
+			<section class="block blog">
+			</section>
 
-            <div class="block content">
-                <div class="block text">
-                    tekst 3
-                </div>
-                <div class="block pics">
-                    pics 3
-                </div>
-            </div>
-            <div class="block comment">comment 3</div>
-        </article>
+			<footer class="block">Footer</footer>
+		</div>
+		<script id="blog" type="text/ractive">
+			{{#each posts}}
+			{{>post}}
+			{{/each}}
+		</script>
 
-    </section>
-    <footer class="block">Footer</footer>
-</div>
+		<script id='post' type='text/ractive'>
+			<article class="block-group">
+			<h1 contenteditable="true">{{title}}</h1>
 
-<script src="jquery.js"></script>
-<script src="http://cdn.sockjs.org/sockjs-0.3.4.min.js"></script>
-<script src="vertxbus.js"></script>
-<script src='http://cdn.ractivejs.org/latest/ractive.min.js'></script>
-<script src="app.js"></script>
+			<div class="block content">
+				<div contenteditable="true" class="block text">
+					{{text}}
+				</div>
+				<div class="block pics">
+					testing 1
+				</div>
+			</div>
+			<div class="block comment">comment 1</div>
+			</article>
+		</script>
 
-<script>
-   $('article > h1').click(function() {
-      $(this).siblings('div').slideToggle('slow');
-   });
+		<script src="jquery.js"></script>
+		<script src='http://cdn.ractivejs.org/latest/ractive.min.js'></script>
+		<script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.10.2/jquery-ui.min.js"></script>
+		<script src="http://rangy.googlecode.com/svn/trunk/currentrelease/rangy-core.js"></script>
+		<script src="hallo.js"></script>
 
-   var eb = null;
+		<script src="http://cdn.sockjs.org/sockjs-0.3.4.min.js"></script>
+		<script src="vertxbus.js"></script>
 
-   $(document).ready(function() {
-      eb = new vertx.EventBus("http://test.tinyleaps.be/eventbus");
-      eb.onopen = function() {
-      var json = {action: "blogs",
-      		  pars:{
-			travel: 1,
-			limit: 10,
-			offset: 0
-		 }};
-         eb.send("be.qsys.tinyleaps.api", json, function(reply) {
-	    alert(JSON.stringify(reply.result));
-         });
-      }
-   });
+		<script src="app.js"></script>
 
-</script>
+		<script>
+			$('article > h1').click(function() {
+				$(this).siblings('div').slideToggle('slow');
+			});
+
+			var eb = null;
+
+			var posts = new Ractive({
+				el: 'section.blog',
+				template: '#blog'
+			});
+
+			var travelinfo = new Ractive({
+				el: 'nav .travelinfo',
+				template: '{{name}} {{period}} {{countries}}'
+			});
+
+			var session = {
+				travel: 1
+			};
+
+			$('article > h1, article div.text').hallo({editable: false}); // voor later: inline editing als ingelogd
+
+			$(document).ready(function() {
+				eb = new vertx.EventBus("http://test.tinyleaps.be/eventbus");
+				eb.onopen = function() {
+
+					eb.send("be.qsys.tinyleaps.api", 
+					{
+						action: "blogs",
+						pars: 
+						{
+							travel: session.travel,
+							limit: 10,
+							offset: 0 
+						}
+					},
+					function(reply) {
+						posts.set('posts', reply.result); 
+					});
+
+					eb.send("be.qsys.tinyleaps.api", 
+					{
+						action: "travelinfo",
+						pars: 
+						{
+							travel: session.travel 
+						}
+					},
+					function(reply) {
+						travelinfo.set('info', reply.result); 
+					});
+				}
+			});
+
+		</script>
 
 
-</body>
+	</body>
 </html>
