--- a/tinyleaps.be/index.html
+++ b/tinyleaps.be/index.html
@@ -113,6 +113,7 @@
 						}
 					},
 					function(reply) {
+						console.log(reply.result);
 						travelinfo.set('info', reply.result); 
 					});
 				}
