remove hallo content editable

--- a/tinyleaps.be/index.html
+++ b/tinyleaps.be/index.html
@@ -84,7 +84,7 @@
 				travel: 1
 			};
 
-			$('article > h1, article div.text').hallo({editable: false}); // voor later: inline editing als ingelogd
+			//$('article > h1, article div.text').hallo({editable: false}); // voor later: inline editing als ingelogd
 
 			$(document).ready(function() {
 				eb = new vertx.EventBus("http://test.tinyleaps.be/eventbus");
