--- a/tinyleaps.be/index.html
+++ b/tinyleaps.be/index.html
@@ -72,14 +72,14 @@
 				$(this).siblings('div').slideToggle('slow');
 			});
 
-/*			$('article .content .text, p').hallo({
-				plugins: {
-					'halloformat': {},
-					'halloheadings': {"formatBlocks": ["p"]},
-					'hallolists': {},
-					'hallolink': {},
-					'halloimage': {}
-				}, editable: true}); */
+		//	$('article .content .text, p').hallo({
+		//		plugins: {
+		//			'halloformat': {},
+		//			'halloheadings': {"formatBlocks": ["p"]},
+		//			'hallolists': {},
+		//			'hallolink': {},
+		//			'halloimage': {}
+		//		}, editable: true}); 
 
 			var eb = null;
 
