--- a/tinyleaps.be/index.html
+++ b/tinyleaps.be/index.html
@@ -6,7 +6,7 @@
 		<link href="./pocketgrid.css" type="text/css" rel="stylesheet"/>
 		<link href="./responsive.css" type="text/css" rel="stylesheet"/>
 		<link href="./jquery-ui.min.css" type="text/css" rel="stylesheet"/>
-		<link href="./jquery-ui.theme.min.css" type="text/css" rel="stylesheet"/>
+		<link href="./jquery-ui.theme.css" type="text/css" rel="stylesheet"/>
 		<title>Reisblog Ruth en Kurt</title>
 	</head>
 
