add date to post

--- a/tinyleaps.be/index.html
+++ b/tinyleaps.be/index.html
@@ -71,6 +71,9 @@
 					{{/each}}
 				</span>
 				{{title}}
+				<span class="date">
+					{{formatDate(postdate, "DD MMM YYYY HH:mm")}}
+				</span>
 			</h1>
 
 
