--- a/tinyleaps.be/index.html
+++ b/tinyleaps.be/index.html
@@ -168,7 +168,7 @@
 
 
 			$(document).ready(function() {
-				eb = new vertx.EventBus("http://test.tinyleaps.be/eventbus");
+				eb = new vertx.EventBus("http://www.tinyleaps.be/eventbus");
 				eb.onopen = function() {
 
 					eb.send("be.qsys.tinyleaps.api", 
